# pico-usb-flash-drive

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  fatfs_flash_driver.c  flash.c  flash.h  main.c  msc_disk.c  msc_disk.h
lib/fatfs/source/: ffconf.h
